updating config to not use https

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ name: Shane Starcher
 
 title: Resume for Shane Starcher
 description: Digital resume for Shane Starcher
-url: 'https://shanestarcher.com'
+url: 'http://shanestarcher.com'
 baseurl: ""
-personal: 'https://www.shanestarcher.com'
+personal: 'http://shanestarcher.com'
 email: shane.starcher@gmail.com
 twitter: sstarcher
 copyright: All rights reserved.
