--- a/_data/professional.yml
+++ b/_data/professional.yml
@@ -1,43 +1,56 @@
-- org:  Move, Inc. (Realtor.com) 
+- org:  Datapipe
+  role: Remote Software Wizard
+  location: Remote
+  when: Dec 2016 - Present
+  bullets:
+    - Something something Infrastructure
+    - Something something Monitoring
+    - Something something Metrics
+    - Something something Clouds
+
+- org:  Move, Inc. (Realtor.com)
   role: Software Wizard
   location: Morgantown, WV
-  when: May 2014 - Present
-  bullets: 
-    - Something something Aws
-    - Something something Docker
-    - Something something Kubernetes
-    - Something something InfluxDB
-    - Something something Sensu
-    
-- org:  Booz Allen Hamilton 
+  when: May 2014 - Dec 2016
+  bullets:
+    - Redesigned infrastructure from a separate service per server system to a highly scalable containerized and dynamic infrastructure.
+    - Created a robust, resilient and distributed job scheduler with a locking, task runner, and alerting system with flexible configurations.
+    - Major overhaul from static logging to logging backed by ElasticSearch ELK stack.
+    - Created extensive monitoring and failure detection suite for early warning of system failures.
+    - Development, evolution and continued hardening of a Kubernetes cluster.
+    - Lead numerous training sessions on technologies such as Kibana, Grafana, ElasticSearch, InfluxDB, Vault.
+    - Leading a team to follow an efficient and Scrum implementation with very reliable commitment deliveries. (Manager's words not mine)
+    - Assisted other teams around the company to speed up their software delivery process and improved monitoring.
+
+- org:  Booz Allen Hamilton
   role: Associate
   location: Fairmont, WV
   when: Oct 2011 - May 2014
-  bullets: 
+  bullets:
     - After familiarizing myself with the team's processes and procedures, I wrote a white paper on recommendations for improvements.  The improvements were taken under advisement and I was given permission to implement the majority of the improvements.
     - I used Puppet to automate the setup of developer workstations for onboarding new individuals.  This improved the time a new developer was prepared to learn the system from 2 weeks to less than a day.
-    - I used both Puppet and a cloud deployment framework to bring both the developer workstation and our systems configuration under configuration management and automated deployment.  This allowed for automation of 70% of system setup for our tools and improved development into a new environment from 6 work days to 25 minutes for the 70% that was brought under automation and configuration management. 
-    - Using Maven and Bamboo, I redesigned the system artifacts to become proper Software Configuration Items (SWCIs) to move the team closer to the CMMI and government goals for the project. 
+    - I used both Puppet and a cloud deployment framework to bring both the developer workstation and our systems configuration under configuration management and automated deployment.  This allowed for automation of 70% of system setup for our tools and improved development into a new environment from 6 work days to 25 minutes for the 70% that was brought under automation and configuration management.
+    - Using Maven and Bamboo, I redesigned the system artifacts to become proper Software Configuration Items (SWCIs) to move the team closer to the CMMI and government goals for the project.
     - Used Spring, Apache Camel, and OracleAQ to implement a multithreaded, redundant biometric system.
     - Decompiled a third party library with a GUI to leverage it in the use of a command line tool to automate its use.
     - Used Spring to create a stand-alone tool for the customer to leverage system components for a significant system enhancement for a two day turnaround.
     - Used Python to manage 100+ disparate servers.  Allowing for quick deployment and fast testing of the code base and environmental synchronization between development, test, and quality assurance environments.
 
-- org: TEKSystems consulting for Lockheed Martin  
-  role: Software Engineer 
+- org: TEKSystems consulting for Lockheed Martin
+  role: Software Engineer
   location: Fairmont, WV
   when: Sept 2010 - Oct 2011
-  bullets: 
+  bullets:
     - Evaluated 12 Enterprise Service Bus(ESB), Service Management, and Service Registry solutions to determine a proper fit for our customer.  Using a multi-stage elimination that gradually evaluated more of the products to eliminate products that could not fit the customer's goals to allow for more focus on the remaining products.
     - Implemented 2 Enterprise Service Bus(ESB) product suites to demonstrate a comparative POC for the customer.  To allow for a requirement by requirement comparison of the final recommended solutions.
     - Made enhancements to a 6 year old Swing application used by the FBI gun check NICS program
 
 - org: Computer Sciences Corporation (CSC)
-  role: Software Engineer 
+  role: Software Engineer
   location: Fairmont, WV
   when: Jan 2008-Sept 2010
   bullets:
-    - | 
+    - |
       Phase 1
         Integrated and implementation of a software biometric system.
         One of two individuals who designed and implemented the phase 1 prototype biometric matching and sharing system.
