--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,6 +2,7 @@
   role: B.S. in Computer Science
   location: Morgantown, WV
   when: May 2008
+  bullets:
 - org: West Virginia University
   role: M.S. in Software Engineering
   when: December 2010
