--- a/_data/professional.yml
+++ b/_data/professional.yml
@@ -18,7 +18,7 @@
     - Creation of a service to manage 100’s of Kubenretes cluster and create new cluster on demand.
     - Implemented continued deployment on Kubernetes with Gitlab and Helm to version and test artifacts, with promotion on tagging.
     - Created a CLI to allow for helm charts to be installed in a single command in parallel along with support for automatic updates.
-    - Lead infrastructure level monitoring and metrics to ensure alerting and debugging capabilities on system faults.
+    - Led infrastructure level monitoring and metrics to ensure alerting and debugging capabilities on system faults.
 
 
 - org:  Move, Inc. (Realtor.com)
@@ -30,7 +30,7 @@
     - Created a robust, resilient and distributed scheduler with a locking, tasks, and alerting.
     - Major overhaul from static logging to logging backed by ElasticSearch ELK stack.
     - Created extensive monitoring and failure detection suite for early warning of system failures using Sensu.
-    - Lead training sessions on technologies such as Kubenretes, Kibana, Grafana, ElasticSearch, InfluxDB.
+    - Led training sessions on technologies such as Kubenretes, Kibana, Grafana, ElasticSearch, InfluxDB.
 
 
 - org:  Booz Allen Hamilton
