update recipes and only display 3 stars and above

--- a/_data/things.yml
+++ b/_data/things.yml
@@ -14,4 +14,4 @@
 
 - title: Cooking
   content:
-    - I love cooking and you can see some of my favorite recipes [here](./recipes/)
+    - I love cooking and you can see some of my favorite recipes [here](./recipes.html)
